--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,18 @@ PyJWT==2.8.0
 # 파일 업로드 처리
 python-multipart==0.0.6
 
+# 기존 패키지들은 그대로 두고 아래 내용 추가
+
+# AI/ML 관련 패키지
+torch>=1.13.0
+transformers>=4.20.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
+
+# 한국어 자연어 처리
+konlpy>=0.6.0
+
+# 추가 텍스트 처리 (difflib은 내장)
+
 # 정규표현식 및 텍스트 처리 (기본 내장이지만 명시)
 # re는 파이썬 내장 모듈이므로 별도 설치 불필요
